@@ -166,10 +166,10 @@ static String processFilesizeString(const String& size, bool isDirectory)
         return unknownFileSizeText();
 
     if (*bytes < 1000000)
-        return makeString(FormattedNumber::fixedWidth(*bytes / 1000., 2), " KB");
+        return makeString(FormattedNumber::fixedWidth(*bytes / 1000.0, 2), " KB");
     if (*bytes < 1000000000)
-        return makeString(FormattedNumber::fixedWidth(*bytes / 1000000., 2), " MB");
-    return makeString(FormattedNumber::fixedWidth(*bytes / 1000000000., 2), " GB");
+        return makeString(FormattedNumber::fixedWidth(*bytes / 1000000.0, 2), " MB");
+    return makeString(FormattedNumber::fixedWidth(*bytes / 1000000000.0, 2), " GB");
 }
 
 static bool wasLastDayOfMonth(int year, int month, int day)
